# arvan-ip-country-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/environments/arvan/: values.arvan.example.yaml
deploy/environments/challenge/: values.challenge.example.yaml
deploy/helm/ip-country-api/: Chart.yaml  README.md  values.yaml
deploy/scripts/: build-sre-dashboards.py  deploy-arvan.sh  deploy-challenge.sh  generate-observability-traffic.py  verify-challenge.sh  verify-pod-recovery.py  verify-sre-dashboards.py
docs/: arvan-deployment.md  observability-metric-inventory.md  performance-validation.md  sre-observability.md
migrations/: env.py
migrations/versions/: 20260714_0001_create_ip_lookup_cache.py
src/ip_country_api/: __init__.py  config.py  lifespan.py  main.py  run.py
src/ip_country_api/api/: dependencies.py  errors.py  health.py  lookups.py  web.py
src/ip_country_api/database/: engine.py  models.py  session.py
src/ip_country_api/domain/: errors.py  ip_validation.py  models.py
src/ip_country_api/observability/: __init__.py  logging.py  metrics.py  request_context.py
src/ip_country_api/providers/: __init__.py  base.py  fake.py  ipinfo.py
src/ip_country_api/repositories/: ip_lookup_repository.py
src/ip_country_api/services/: ip_lookup_service.py
src/ip_country_api/static/: app.css  (+1 more)
tests/: conftest.py
tests/api/: test_api.py  test_web_ui.py
tests/integration/: test_postgresql.py
tests/unit/: test_config.py  test_fake_provider.py  test_ip_validation.py  test_observability.py  test_provider.py  test_repository.py  test_run.py  test_service.py
(+16 files in other folders)
