[project]
name = "ip-country-api"
version = "0.1.0"
description = "Cache-aside IP country lookup service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.16.5",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "prometheus-client==0.22.1",
  "psycopg[binary,pool]==3.2.10",
  "pydantic-settings==2.10.1",
  "sqlalchemy==2.0.43",
  "structlog==25.4.0",
  "tenacity==9.1.2",
  "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "ruff==0.12.9",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ip_country_api"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: isolated unit tests",
  "api: in-process HTTP API tests",
  "integration: tests requiring an isolated PostgreSQL database",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ASYNC221", "S104", "S105", "S106", "S607"]
"migrations/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ip_country_api"]
plugins = ["pydantic.mypy"]

[tool.coverage.run]
branch = true
source = ["ip_country_api"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = ["if TYPE_CHECKING:", "if __name__ == .__main__.:"]
